test/src/e2e_vm_tests/test_programs/should_pass/language/associated_const_impl_multiple/src/main.sw
script;

struct Struct { }

impl Struct {
    const ID: u32 = 1;
}

impl Struct {
    const ID2: u32 = 2;
}

fn main() -> u32 {
  Struct::ID
}
